finance-app-file-upload/devops/application/upload.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: upload-api
  labels:
    istio-injection: enabled
