finance-app-file-upload/devops/application/upload.deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: upload-deployment
  namespace: upload-api
  labels:
    app: upload
spec:
  replicas: 3
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      labels:
        app: upload
    spec:
      containers:
        - name: upload
          image: local/upload-app
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
