finance-app-file-upload/devops/application/upload.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: upload-api
spec:
  selector:
    app: upload
  ports:
    - name: http
      port: 8080
